# api

./: .env  .gitignore  Dockerfile  README.md  conexao.py  custom-pg_hba.conf  custom-postgresql.conf  docker-compose.yml  init-postgres.sh  init.sh  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: main.yml
app/: connection-test.py  data.py  database copy.py  database.py  main.py  models.py  router.py  schema.py  schemas.py
app-old/: main.py
orm/: database.py
tests/: local-tests.py  tests.py
